Fix latex & prompt-box bugs

--- a/_posts/2024-02-12-acwing算法基础课-数据结构.md
+++ b/_posts/2024-02-12-acwing算法基础课-数据结构.md
@@ -276,12 +276,12 @@ int query(char *s) {
 
 相比于原始的Trie树的`query()`函数有变形：“尽可能”找使得异或值最大的串。
 
-> [!TIP]
 >
 > **关于解题思路的经验**
 >
 > - 别一上来就想找个最快的算法（O(1)？），可能会直接走进死胡同，白白浪费时间；可以根据数据范围猜测算法复杂度，不要有不切实际的期望
 > - 实在没思路的时候，先写暴力，然后再尝试优化可能是一个思路
+{: .prompt-tip }
 
 ## 并查集
 
