--- a/_posts/2024-01-31-acwing算法基础课-基本算法.md
+++ b/_posts/2024-01-31-acwing算法基础课-基本算法.md
@@ -301,9 +301,9 @@ $$
 
 将范围较大的数（较稀疏）映射到小范围数的集合。
 
-映射 $ f: X\rarr Y$ 其中 $X\in Z, Y=\{1, 2, 3, ...\}$，且映射有保序性:
+映射 $ f: X\rightarrow Y$ 其中 $X\in Z, Y=\{1, 2, 3, ...\}$，且映射有保序性:
 
-$ \forall x, y \in X, x \lt y \Rarr f(x) \lt f(y) $​
+$ \forall x, y \in X, x \lt y \Rightarrow f(x) \lt f(y) $​
 
 步骤：
 
