Update acwing:dp content

--- a/_posts/2024-03-11-acwing算法基础课-动态规划.md
+++ b/_posts/2024-03-11-acwing算法基础课-动态规划.md
@@ -61,8 +61,10 @@ DP舍弃了一大堆不可能成为最优解的答案。譬如：
 
 ### DP算法的两种实现方式
 
-- 按顺序递推
-- 记忆化搜索
+DP能实现的前提：状态间的依赖关系是DAG，即不能有环
+
+- 按顺序递推：对于容易找到依赖关系规律，计算顺序明确的（线性DP/区间DP）
+- 记忆化搜索：不容易找到依赖关系规律，计算顺序不明确的（区间DP/“滑雪”）
 
 ### DP算法的时间复杂度计算
 
@@ -238,7 +240,9 @@ $$
 
 定义$f[i][j]$为将串$a[1...i]$变为$b[1...j]$的最小操作次数
 
-状态转移时，只考虑对$a[i]$​的操作即可，原因证明较复杂，参考[acwing讨论区](https://www.acwing.com/solution/content/5607/)
+状态转移时，只考虑对$a[i]$​​的操作即可，原因证明较复杂，参考[acwing讨论区](https://www.acwing.com/solution/content/5607/)
+
+不严谨理解：对每个操作序列，如果存在对最后一个字符的操作，则都可以等价地将该操作移到最后执行
 
 $$
 f[i][j] = \min \{f[i-1][j]+1, f[i][j-1]+1, 
@@ -249,9 +253,7 @@ f[i-1][j-1] & a_i = b_j
 \}
 $$
 
-初始化：
-
-$f[0][j]=j, f[i][0]=i, 1\le i \le n, 1\le j \le m$
+初始化：$f[0][j]=j, f[i][0]=i, 1\le i \le n, 1\le j \le m$
 
 ## 区间DP
 
@@ -305,3 +307,40 @@ $$
 $$
 f[i][j] = f[i-1][j] + f[i][j-i]
 $$
+
+## 数位统计、状态压缩DP
+
+跳了
+
+## 树形DP
+
+### 没有上司的舞会
+
+定义$f[i][j]$为以节点$i$为根节点的子树，选择节点$i$（$j=1$）/不选择节点$i$（$j = 0$）时子树中选择节点权值和的最大值
+
+对节点$x$，其子节点$v_i$（若有）​：
+
+$$
+f[x][0] = \sum_i \max \{f[v_i][0], f[v_i][1]\} \\
+f[x][1] = \sum_i f[v_i][0] + w_x
+$$
+
+状态转移依赖于子节点，所以可在DFS过程中**后序遍历**树，填充DP表；使用**邻接表**存树，只存**出边**即可
+
+DP表初始化：全填0即可
+
+## 记忆化搜索
+
+### 滑雪
+
+定义$f[i][j]$为从$(i, j)$出发的最大轨迹长度
+
+$$
+f[i][j] = \max \{ f[i-1][j], f[i][j+1], f[i+1][j], f[i][j-1] \} + 1
+$$
+
+使用一般的递推难以计算DP表（可能需要先算“无路可走”的格子，再算“有一路可走”的格子……），适用**记忆化搜索**
+
+记忆化搜索是DP的一种实现方式，但仍需要满足前提：状态依赖关系中不存在环
+
+此问题的性质保证了不存在环：因为轨迹上要求高度严格递减
